<resources>
    <string name="app_name">BeduAppProyecto</string>

    <string name="hello_text">Hola, Estas es la sesión 2!</string>

    <string name="accept_button">ACEPTAR</string>

    <string name="button_clicked">Haz dado click al botón!</string>

    <string name="add_text">Ingresa un texto</string>
    <string name="phone">Teléfono</string>
    <string name="here_text">Aquí el texto del EditText</string>

    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="email">Correo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_clase5_fragments">Clase5Fragments</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>