<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <!-- {COLOCA AQUI EL CONTENIDO DEL LAYOUT} -->
    <!-- <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/hello_text"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="14sp"

        />

    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/btnAccept"
        android:backgroundTint="@color/mexicanPink"
        android:text="@string/accept_button"
        android:textColor="@color/gray"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /> -->

    <ImageView
        android:id="@+id/imageviewbeto"
        android:src="@drawable/beto"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:scaleType="fitCenter"
        />

    <!-- <TextView
        android:layout_marginTop="24dp"
        android:textSize="18dp"
        android:text="@string/here_text"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/> -->

    <EditText
        android:id="@+id/editText"
        android:hint="@string/name"
        style="@style/editText"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="text"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        />
    <EditText
        android:id="@+id/editText2"
        android:hint="@string/lastName"
        style="@style/editText"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="text"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        />
    <EditText
        android:id="@+id/editText3"
        android:hint="@string/phone"
        style="@style/editText"
        android:layout_marginTop="24dp"
        android:maxLength="10"
        android:layout_marginHorizontal="24dp"
        android:inputType="phone"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="12dp"
        />
    <EditText
        android:id="@+id/editText4"
        android:hint="@string/email"
        style="@style/editText"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        />
    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/btnAccept"
        android:backgroundTint="@color/backgroundBoton0"
        android:text="@string/accept_button"
        android:textColor="@color/botonText"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>